--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@pinecone-database/pinecone": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.4.3",
+    "@types/md5": "^2.3.4",
     "aws-sdk": "^2.1483.0",
     "axios": "^1.6.0",
     "class-variance-authority": "^0.7.0",
@@ -24,6 +25,7 @@
     "drizzle-orm": "^0.28.6",
     "langchain": "^0.0.176",
     "lucide-react": "^0.284.0",
+    "md5": "^2.3.0",
     "next": "13.5.4",
     "openai-edge": "^1.2.2",
     "pdf-parse": "^1.1.1",
